--- a/platformio.ini
+++ b/platformio.ini
@@ -26,6 +26,9 @@ custom_lib_deps_Atmel =
 	arduino-libraries/Servo @ 1.1.8
 custom_lib_deps_Pico =
 	ricaun/ArduinoUniqueID @ ^1.3.0
+custom_lib_deps_STM32 =
+	ricaun/ArduinoUniqueID @ ^1.3.0
+    https://github.com/aeroniemi/FlashStorage_STM32#v2.0.0
 build_flags =
 	-DMF_REDUCE_FUNCT_LEDCONTROL
 	-DMAXCALLBACKS=35
@@ -147,3 +150,22 @@ extra_scripts =
 	${env.extra_scripts}
 
 ; Build settings for the STM32F072
+[env:mobiflight_stm32f072]
+platform = ststm32
+board = disco_f072rb
+board_build.mcu = stm32f072rbt6
+framework = arduino
+build_flags =
+	${env.build_flags}
+	-I./_Boards/STM32
+    -D PIO_FRAMEWORK_ARDUINO_ENABLE_CDC
+    -D FLASH_BASE_ADDRESS=0x0801F800
+build_src_filter =
+	${env.build_src_filter}
+lib_deps =
+	${env.lib_deps}
+	${env.custom_lib_deps_STM32}
+extra_scripts = 
+	${env.extra_scripts}
+debug_tool = stlink
+upload_protocol = stlink    
