Disable touch sensitive capacitance module to allow standard ADC use

--- a/platformio.ini
+++ b/platformio.ini
@@ -37,6 +37,7 @@ build_flags =
 	-DMAXSTREAMBUFFERSIZE=96    
 	-DDEFAULT_TIMEOUT=5000
 ;	-DREVERSED_OUTPUT_OUTPUT
+    -DTSC_REMOVED
 ;	-DREVERSED_OUTPUT_OUTPUTSHIFTER
 ;	-DDEBUG2CMDMESSENGER=1
 	-I./src/MF_Analog
@@ -118,6 +119,7 @@ framework = arduino
 build_flags = 
 	${env.build_flags}
 	-I./_Boards/Atmel/Board_Nano
+    -DHAL_ADC_MODULE_ENABLED
 build_src_filter = 
 	${env.build_src_filter}
 lib_deps =
