--- a/platformio.ini
+++ b/platformio.ini
@@ -170,4 +170,22 @@ lib_deps =
 extra_scripts = 
 	${env.extra_scripts}
 debug_tool = stlink
-upload_protocol = stlink    
+upload_protocol = stlink
+; Build settings for the STM32F072
+[env:mobiflight_stm32f401]
+platform = ststm32
+board = blackpill_f401cc
+framework = arduino
+build_flags =
+	${env.build_flags}
+	-I./_Boards/STM32
+    -D PIO_FRAMEWORK_ARDUINO_ENABLE_CDC
+    ;-D FLASH_BASE_ADDRESS=0x0801F800
+build_src_filter =
+	${env.build_src_filter}
+lib_deps =
+	${env.lib_deps}
+	${env.custom_lib_deps_STM32}
+extra_scripts = 
+	${env.extra_scripts}
+upload_protocol = dfu
