--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,10 @@
     "[cpp]": {
         "editor.defaultFormatter": "ms-vscode.cpptools",
         "editor.formatOnSave": true
+    },
+    "workbench.colorCustomizations": {
+        "activityBar.background": "#252E40",
+        "titleBar.activeBackground": "#33405A",
+        "titleBar.activeForeground": "#F9FAFC"
     }
 }
